# gp-mlx

./: .copier-answers.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/gpmlx/: __init__.py  main.py
tests/: test_main.py
